@@ -31,6 +31,7 @@ Changes for 1.7.0
 
 Changes for 1.6.3
 
+ - [ZBX-448] fixed zabbix server status when frontend and backend are on different servers (Vedmak)
  - [ZBX-660] fixed screen clock set to server time showed local time (Artem)
  - [ZBX-603] fixed min autologout value to 90 seconds
  - [ZBX-762] improved performance of processing of log and text items (Sasha)
